# on-go

./: .env.example  .gitignore  README.md
.github/workflows/: README.md  ci.yml  valence-canary-check.yml
contracts/: README.md
contracts/events/: README.md
contracts/http/: README.md  inference-api.openapi.yaml  live-inference-api.openapi.yaml  personalization-worker.openapi.yaml  raw-session-ingest.openapi.yaml  raw-session-replay.openapi.yaml
contracts/operations/: derived-state-semantics.schema.json  inference-bundle-manifest.schema.json  valence-canary-dashboard.schema.json
contracts/personalization/: README.md  personalization-feature-contract.schema.json  polar-first-feature-contract.schema.json  user-profile.schema.json  valence-scoped-policy.schema.json
docs/architecture/: monorepo.md  production-backend.md
docs/backend/: datasets-f2-1.md  datasets-f2-2.md  datasets-f2-3.md  datasets-f2.md  fusion-serving-bundle-loading-k5-7.md  fusion-serving-contract-k5-6.md  fusion-serving-k5-8-runtime-bundle-export-and-live-contract.md  m7-10-1-physical-device-evidence-rerun.md  m7-10-polar-expanded-factual-device-acceptance-canary-gate.md  m7-3-polar-first-ablation-contract.md  m7-4-1-remediation-loop.md  m7-4-runtime-candidate-gate.md  m7-5-runtime-bundle-export.md  m7-6-live-inference-polar-first-parity.md  m7-7-on-go-ios-polar-first-runtime-integration.md  m7-8-acceptance-claim-gate.md  m7-9-polar-expanded-fusion-implementation-plan.md  m7-9-polar-expanded-fusion.md  modeling-g1.md  modeling-g2.md  modeling-g3-1.md  modeling-g3-2.md  modeling-g3.md  personalization-h1.md  personalization-h2.md  personalization-h3.md  personalization-h4.md  personalization-h5.md  personalization-h6.md  personalization-i1-1.md  polar-first-feature-contract.md  polar-first-model-implementation-plan.md  raw-ingest-c1.md  raw-ingest-c2.md  raw-ingest-c3.md  raw-ingest-c4.md  replay-d1.md  replay-d2.md  replay-d3.md  research-gate-i1.md  (+54 more)
docs/capture/: device-e2e-validation-runbook.md  (+3 more)
infra/: model-bundle.version
scripts/: README.md  bootstrap-model-volume.sh  draft_personalization_profile_from_minio.py  minio_audit_sessions.py  push_l2_from_replay_infer.py  restart-stack.sh  run-signal-worker.sh  run-stack.sh  stack-common.sh
services/: README.md
services/dataset-registry/: README.md  pyproject.toml
services/dataset-registry/deploy/: README.md
services/dataset-registry/migrations/: README.md
services/dataset-registry/registry/: datasets.jsonl
services/dataset-registry/src/: README.md
services/dataset-registry/src/dataset_registry/: __init__.py  catalog.py  external_imports.py  main.py  models.py  registry.py  wesad.py
services/dataset-registry/tests/: README.md  test_catalog.py  test_inspect_source.py  test_registry.py  test_wesad.py
services/inference-api/: README.md  pyproject.toml
services/inference-api/deploy/: Dockerfile
services/inference-api/src/inference_api/: api.py  config.py  main.py  models.py  semantics.py
services/inference-api/tests/: test_loader.py  test_runtime_bundle_assets.py  test_semantics.py
services/ingest-api/: .env.example  README.md  pyproject.toml
services/ingest-api/deploy/: Dockerfile  README.md
services/ingest-api/migrations/: 0001_raw_ingest_metadata.sql  0002_ingest_runtime_support.sql  0003_personalization_profiles.sql
services/ingest-api/src/: README.md
services/ingest-api/src/ingest_api/: __init__.py  api.py  config.py  main.py  migrate.py  models.py  repository.py  service.py  storage.py
services/ingest-api/tests/: README.md  test_checksum_policy.py  test_ingest_lifecycle_fixtures.py  test_models.py
services/live-inference-api/: README.md  pyproject.toml
services/live-inference-api/deploy/: Dockerfile
services/live-inference-api/src/live_inference_api/: activity_context_adjust.py  api.py  baseline_l1.py  buffer.py  calibration_l2.py  config.py  features.py  loader.py  main.py  replay_infer.py  semantics.py  user_display_label.py
services/live-inference-api/tests/: test_activity_context_adjust.py  test_api.py  test_baseline_l1.py  test_buffer.py  test_calibration_l2.py  test_features.py  test_loader.py  test_replay_infer.py  test_semantics.py  test_user_display_label.py
services/modeling-baselines/: README.md  pyproject.toml
services/modeling-baselines/src/: README.md
services/modeling-baselines/src/modeling_baselines/: __init__.py  audit.py  estimators.py  main.py  metrics.py  multi_dataset.py  pipeline.py  tracking.py
services/modeling-baselines/tests/: README.md  test_audit.py  test_estimators.py  test_m7_3_polar_first_contract.py  test_m7_5_runtime_bundle_export_contract.py  test_metrics.py  test_multi_dataset.py  test_pipeline.py
services/personalization-worker/: README.md  pyproject.toml
services/personalization-worker/deploy/: Dockerfile
services/personalization-worker/src/personalization_worker/: api.py  config.py  main.py  models.py  store.py
services/personalization-worker/tests/: test_api.py
services/replay-service/: .env.example  README.md  pyproject.toml
services/replay-service/deploy/: Dockerfile  README.md
services/replay-service/migrations/: README.md
services/replay-service/src/: README.md
services/replay-service/src/replay_service/: __init__.py  api.py  config.py  errors.py  main.py  models.py  repository.py  run_registry.py  service.py  storage.py
services/replay-service/tests/: README.md  stack_e2e.py  stack_stream_e2e.py  test_integration_stack.py  test_models.py  test_orchestration.py  test_run_registry.py  test_service.py  test_streaming_stack.py
services/signal-processing-worker/: .env.example  README.md  pyproject.toml
services/signal-processing-worker/deploy/: Dockerfile  README.md
services/signal-processing-worker/migrations/: README.md
services/signal-processing-worker/src/: README.md
services/signal-processing-worker/src/signal_processing_worker/: __init__.py  config.py  db.py  errors.py  main.py  models.py  repository.py  service.py  storage.py
services/signal-processing-worker/tests/: README.md  test_models.py  test_service.py
(+87 files in other folders)
