[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "on-go-modeling-baselines"
version = "0.1.0"
description = "Watch-only baseline modeling pipeline for on-go research phase"
requires-python = ">=3.9"
dependencies = [
  "numpy>=2.0.0,<3.0.0",
  "matplotlib>=3.9.0,<4.0.0",
  "scikit-learn>=1.5.2,<1.7.0",
  "xgboost>=2.1.1,<3.0.0",
  "lightgbm>=4.5.0,<5.0.0",
  "catboost>=1.2.7,<2.0.0",
  "mlflow>=2.16.0,<3.0.0",
  "joblib>=1.4.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
]

[project.scripts]
on-go-modeling-baselines = "modeling_baselines.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
